# mof2e

./: .gitignore  =0.10.0  =3.25.0  README.md  ana.py  b  causal_main.py  convert_to_ase.py  debug_dataset.py  extract_data.py  extract_info.py  irm_trainer.py  main.py  phast_test.py  phast_test_single.py  pyproject.toml  requirements.txt  shap_vis.py  transform_to_lmdb.py  指令.txt
.github/workflows/: build_docs.yml  deploy_docs.yml  test.yml
causal_model/: README.md
causal_model/data_causal/: chemistry_priors_builder.py  cooperative_target_builder.py  env_label_builder.py  ood_split_builder.py  prior_alpha_builder.py
causal_model/eval_causal/: metrics.py
causal_model/model_causal/: __init__.py  causal_modules.py  escn_v7_causal.py  escn_v9_causal.py
causal_model/prep_data/: chemistry_priors.json  cooperative_target.parquet  env_labels.parquet  ood_split.json  prior_alpha_per_atom.parquet
causal_model/scripts/: verify_backward_compat.sh
causal_model/trainer_causal/: __init__.py  causal_trainer_v7.py  causal_trainer_v9.py
creatorMd/: 10MOF_Causal_Embedded_Model_Implementation_Plan_V9.md  9MOF_Causal_Embedded_Model_Proposal9.md
lora_model/: eval_s2ef_eqv2_31.py
lora_model/config_lora/: Embedding_bratch.yml  base_lora.yml  base_lora2.yml  eSCN_lora.yml  eqv2_31M_lora.yml  eqv2_31M_lora2.yml  eqv2_31M_lora_debug.yml  validate_base.yml  validate_eqv2_31M.yml
lora_model/data_lora/: analyze_natoms_distribution.py  architecture_31m.txt  defect.txt  defect_list.txt  getVali.py  mof_encoder.txt  (+16 more)
phast/: embedding.py
phast-main/: requirements-docs.txt
(+124 files in other folders)
